--- a/charts/n8n/templates/deployment.yaml
+++ b/charts/n8n/templates/deployment.yaml
@@ -62,7 +62,7 @@ spec:
       {{- end }}
       serviceAccountName: {{ include "n8n.serviceAccountName" . }}
       securityContext:
-        {{- toYaml (coalesce .Values.main.podSecurityContext .Values.global.podSecurityContext (dict)) | nindent 8 }}
+        {{- toYaml (mergeOverwrite (deepCopy (default (dict) .Values.global.podSecurityContext)) (default (dict) .Values.main.podSecurityContext)) | nindent 8 }}
       {{- if or .Values.main.initContainers }}
       initContainers:
       {{- if .Values.main.initContainers }}
@@ -76,7 +76,7 @@ spec:
             {{- toYaml . | nindent 12 }}
           {{- end }}
           securityContext:
-            {{- toYaml (coalesce .Values.main.securityContext .Values.global.securityContext (dict)) | nindent 12 }}
+            {{- toYaml (mergeOverwrite (deepCopy (default (dict) .Values.global.securityContext)) (default (dict) .Values.main.securityContext)) | nindent 12 }}
           image: "{{ include "n8n.image" . }}"
           imagePullPolicy: {{ include "n8n.imagePullPolicy" . }}
           {{- $extraConfigMaps := uniq (concat (default (list) .Values.global.envFromConfigMaps) (default (list) .Values.main.envFromConfigMaps)) }}
