--- a/charts/n8n/templates/deployment.webhook.yaml
+++ b/charts/n8n/templates/deployment.webhook.yaml
@@ -72,8 +72,8 @@ spec:
       {{- end }}
       containers:
         - name: {{ .Chart.Name }}-webhook
-          image: "{{ include "n8n.image" . }}"
-          imagePullPolicy: {{ include "n8n.imagePullPolicy" . }}
+          image: "{{ include "n8n.image" (dict "context" . "component" .Values.webhook) }}"
+          imagePullPolicy: {{ include "n8n.imagePullPolicy" (dict "context" . "component" .Values.webhook) }}
           {{- if .Values.webhook.command }}
           command:
             {{- toYaml .Values.webhook.command | nindent 12 }}
