Add MCP webhook support with PVC and ingress
Validate Redis host when MCP or regular webhook is enabled
Add dedicated MCP webhook ingress paths and service
Introduce optional MCP PVC for dynamic persistence
Extend values.yaml with MCP configuration options

--- a/charts/n8n/templates/ingress.yaml
+++ b/charts/n8n/templates/ingress.yaml
@@ -70,6 +70,17 @@ spec:
                 port:
                   number: {{ $.Values.webhook.service.port | default 80  }}
           {{- end }}
+          {{- if $.Values.webhook.mcp.enabled }}
+          {{- range $mcpPath := $.Values.webhook.mcp.ingress.paths }}
+          - path: {{ $mcpPath }}
+            pathType: {{ $.Values.webhook.mcp.ingress.pathType | default "Prefix" }}
+            backend:
+              service:
+                name: {{ $fullName }}-webhook-mcp
+                port:
+                  number: {{ $.Values.webhook.mcp.service.port | default $.Values.webhook.service.port | default 80  }}
+          {{- end }}
+          {{- end }}
           {{- end }}
     {{- end }}
   {{- end }}
