--- a/charts/n8n/values.yaml
+++ b/charts/n8n/values.yaml
@@ -515,6 +515,69 @@ webhook:
   # -- Pod termination grace period in seconds for webhook deployment.
   terminationGracePeriodSeconds: 30
 
+  mcp:
+    # -- Enable a dedicated single-replica webhook deployment for MCP traffic (`/mcp*`).
+    enabled: false
+
+    # -- Optional image override for MCP webhook workload.
+    # Supports `repository`, `tag`, and `pullPolicy`.
+    # Falls back to `webhook.image`, then `global.image`, then `image`.
+    image: {}
+
+    # -- Additional env vars for MCP webhook pods.
+    # Merged on top of `global.extraEnv` and `webhook.extraEnv`; same `name` overrides.
+    extraEnv: []
+
+    # -- Additional ConfigMaps loaded via `envFrom` for MCP webhook pods.
+    envFromConfigMaps: []
+
+    # -- Additional Secrets loaded via `envFrom` for MCP webhook pods.
+    envFromSecrets: []
+
+    # -- Optional overrides for webhook persistence. Unset values inherit from `webhook.persistence`.
+    persistence: {}
+
+    # -- Deployment annotations for MCP webhook deployment.
+    deploymentAnnotations: {}
+    # -- Deployment labels for MCP webhook deployment.
+    deploymentLabels: {}
+    # -- Pod annotations for MCP webhook deployment.
+    podAnnotations: {}
+    # -- Pod labels for MCP webhook deployment.
+    podLabels: {}
+
+    # -- Security context overrides for MCP webhook deployment.
+    podSecurityContext: {}
+    securityContext: {}
+
+    # -- Pod resource overrides for MCP webhook deployment.
+    resources: {}
+
+    # -- Scheduling overrides for MCP webhook deployment.
+    nodeSelector: {}
+    tolerations: []
+    affinity: {}
+
+    # -- Extra pod volumes for MCP webhook pods.
+    extraVolumes: []
+    # -- Extra volume mounts for MCP webhook pods.
+    extraVolumeMounts: []
+
+    service:
+      # -- Service annotations for MCP webhook service.
+      annotations: {}
+      # -- Service type for MCP webhook service.
+      type: ClusterIP
+      # -- Service port for MCP webhook service.
+      port: 80
+
+    ingress:
+      # -- MCP paths that should be routed to the dedicated MCP webhook service.
+      paths:
+        - /mcp
+      # -- Path type for MCP ingress paths.
+      pathType: Prefix
+
 # -- Additional static Kubernetes manifests rendered with the chart.
 extraManifests: []
 # - apiVersion: v1
