Fix webhook.mcp to require webhook.enabled
Ensure MCP resources only deploy when webhook is enabled
Update Valkey validation to check only webhook.enabled
Align ingress, service, and PVC conditions with new logic

--- a/charts/n8n/templates/deployment.webhook.mcp.yaml
+++ b/charts/n8n/templates/deployment.webhook.mcp.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.webhook.mcp.enabled -}}
+{{- if and .Values.webhook.enabled .Values.webhook.mcp.enabled -}}
 {{- /* Validate Valkey/Redis configuration */}}
 {{- include "n8n.validateValkey" . }}
 ---
