--- a/charts/n8n/templates/service.webhook.mcp.yaml
+++ b/charts/n8n/templates/service.webhook.mcp.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.webhook.mcp.enabled }}
+{{- if and .Values.webhook.enabled .Values.webhook.mcp.enabled }}
 ---
 apiVersion: v1
 kind: Service
