--- a/charts/n8n/templates/deployment.worker.yaml
+++ b/charts/n8n/templates/deployment.worker.yaml
@@ -64,9 +64,10 @@ spec:
       serviceAccountName: {{ include "n8n.serviceAccountName" . }}
       securityContext:
         {{- toYaml (mergeOverwrite (deepCopy (default (dict) .Values.global.podSecurityContext)) (default (dict) .Values.worker.podSecurityContext)) | nindent 8 }}
-      {{- if .Values.worker.initContainers }}
+      {{- $mergedInitContainers := concat (default (list) .Values.global.initContainers) (default (list) .Values.worker.initContainers) }}
+      {{- if gt (len $mergedInitContainers) 0 }}
       initContainers:
-      {{ tpl (toYaml .Values.worker.initContainers) . | nindent 8 }}
+      {{ tpl (toYaml $mergedInitContainers) . | nindent 8 }}
       {{- end }}
       containers:
         - name: {{ .Chart.Name }}-worker
