--- a/charts/n8n/Chart.yaml
+++ b/charts/n8n/Chart.yaml
@@ -6,7 +6,7 @@ appVersion: 2.7.3
 type: application
 description: "Helm Chart for deploying n8n on Kubernetes, a fair-code workflow automation platform with native AI capabilities for technical teams. Easily automate tasks across different services."
 home: https://github.com/klicktipp/helm-charts
-icon: https://n8n.io/favicon.ico
+icon: https://avatars.githubusercontent.com/u/45487711?s=200&v=4
 keywords:
   - Workflow Automation
   - Workflow
