Add README sync and values docs checks
Update Helm chart README to version 0.1.3
Document global.initContainers and image overrides
Add MCP webhook configuration options
Introduce scripts:
generate-chart-readmes.sh for helm-docs generation
check-readme-consistency.sh to detect outdated READMEs
check-values-docs.py and .sh for values.yaml doc validation

--- a/charts/n8n/values.yaml
+++ b/charts/n8n/values.yaml
@@ -555,6 +555,7 @@ webhook:
 
     # -- Security context overrides for MCP webhook deployment.
     podSecurityContext: {}
+    # -- Container security context overrides for MCP webhook deployment.
     securityContext: {}
 
     # -- Pod resource overrides for MCP webhook deployment.
@@ -562,7 +563,9 @@ webhook:
 
     # -- Scheduling overrides for MCP webhook deployment.
     nodeSelector: {}
+    # -- Pod tolerations for MCP webhook deployment.
     tolerations: []
+    # -- Pod affinity for MCP webhook deployment.
     affinity: {}
 
     # -- Extra pod volumes for MCP webhook pods.
