Add Renovate config for Helm chart updates
Introduce renovate.json with regex manager for Chart.yaml
Annotate Chart.yaml with renovate dependency metadata

--- a/charts/n8n/Chart.yaml
+++ b/charts/n8n/Chart.yaml
@@ -2,6 +2,7 @@
 apiVersion: v2
 name: n8n
 version: 1.0.0
+# renovate: datasource=github-releases depName=n8n-io/n8n
 appVersion: 2.7.3
 type: application
 description: "Helm Chart for deploying n8n on Kubernetes, a fair-code workflow automation platform with native AI capabilities for technical teams. Easily automate tasks across different services."
