--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,14 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "packageRules": [
+    {
+      "changelogUrl": "https://github.com/n8n-io/n8n",
+      "matchPackageNames": [
+        "n8nio/n8n",
+        "n8n"
+      ]
+    }
+  ],
   "customManagers": [
     {
       "customType": "regex",
