--- a/renovate.json
+++ b/renovate.json
@@ -4,8 +4,7 @@
     {
       "changelogUrl": "https://github.com/n8n-io/n8n",
       "matchPackageNames": [
-        "n8nio/n8n",
-        "n8n"
+        "n8nio/n8n"
       ]
     }
   ],
