--- a/charts/rabbitmq-cluster/templates/topology.yaml
+++ b/charts/rabbitmq-cluster/templates/topology.yaml
@@ -4,7 +4,8 @@
 {{- $defaultVhost := include "rabbitmq-cluster.default-vhost" . }}
 
 {{- range $name, $queue := (.Values.rabbitmq.topology.queues | default (dict)) }}
-{{- if ($queue.enabled | default true) }}
+{{- $queueEnabled := hasKey $queue "enabled" | ternary $queue.enabled true }}
+{{- if $queueEnabled }}
 
 {{- $queueName := $queue.name | default $name }}
 {{- $queueType := $queue.type | default "quorum" }}
@@ -33,8 +34,9 @@ spec:
     name: {{ $clusterRef | quote }}
 
 {{- $queueExchange := $queue.exchange | default (dict) }}
-{{- if ($queueExchange.enabled | default true) }}
-{{- $exchangeName := $queueExchange.name | default $queueName | include "com.klicktipp.slugify-string" }}
+{{- $queueExchangeEnabled := hasKey $queueExchange "enabled" | ternary $queueExchange.enabled true }}
+{{- if $queueExchangeEnabled }}
+{{- $exchangeName := $queueExchange.name | default $queueName }}
 {{- $exchangeType := $queueExchange.type | default "fanout" }}
 {{- $exchangeDurable := $queueExchange.durable | default true }}
 {{- $exchangeAutoDelete := $queueExchange.autoDelete | default false }}
@@ -60,10 +62,11 @@ spec:
 {{- end }} {{/* END queue exchange */}}
 
 {{- $binding := $queue.binding | default (dict) }}
-{{- if ($binding.enabled | default true) }}
+{{- $queueBindingEnabled := hasKey $binding "enabled" | ternary $binding.enabled true }}
+{{- if $queueBindingEnabled }}
 {{- $bindingName := $binding.name | default $queueName }}
 {{- $routingKey := $binding.routingKey | default "" }}
-{{- $bindingSource := $binding.source | default (($queueExchange.name | default $queueName) | include "com.klicktipp.slugify-string") }}
+{{- $bindingSource := $binding.source | default ($queueExchange.name | default $queueName) }}
 ---
 apiVersion: rabbitmq.com/v1beta1
 kind: Binding
@@ -91,7 +94,8 @@ spec:
 {{- end }} {{/* END queue loop */}}
 
 {{- range $name, $exchange := (.Values.rabbitmq.topology.exchanges | default (dict)) }}
-{{- if ($exchange.enabled | default true) }}
+{{- $exchangeEnabled := hasKey $exchange "enabled" | ternary $exchange.enabled true }}
+{{- if $exchangeEnabled }}
 {{- $exchangeName := $exchange.name | default $name }}
 {{- $exchangeType := $exchange.type | default "fanout" }}
 {{- $exchangeDurable := $exchange.durable | default true }}
@@ -124,7 +128,8 @@ spec:
 {{- end }} {{/* END exchanges loop */}}
 
 {{- range $name, $binding := (.Values.rabbitmq.topology.bindings | default (dict)) }}
-{{- if ($binding.enabled | default true) }}
+{{- $bindingEnabled := hasKey $binding "enabled" | ternary $binding.enabled true }}
+{{- if $bindingEnabled }}
 {{- $bindingName := $binding.name | default $name }}
 {{- $bindingVhost := $binding.vhost | default $defaultVhost }}
 {{- $bindingSource := required (printf "rabbitmq.topology.bindings.%s.source is required" $name) $binding.source }}
@@ -159,7 +164,8 @@ spec:
 {{- end }} {{/* END bindings loop */}}
 
 {{- range $name, $policy := (.Values.rabbitmq.topology.policies | default (dict)) }}
-{{- if ($policy.enabled | default true) }}
+{{- $policyEnabled := hasKey $policy "enabled" | ternary $policy.enabled true }}
+{{- if $policyEnabled }}
 ---
 {{- $policyName := $policy.name | default $name }}
 {{- $pattern := required (printf "rabbitmq.topology.policies.%s.pattern is required" $name) $policy.pattern }}
