--- a/charts/rabbitmq-cluster/values.yaml
+++ b/charts/rabbitmq-cluster/values.yaml
@@ -33,6 +33,27 @@ monitoring:
 
 terminationGracePeriodSeconds: 600
 
+extraObjects: []
+# Raw objects rendered as-is (similar to a raw chart).
+# Supports list items as either YAML objects or raw YAML strings.
+# Template expressions are supported via tpl.
+# Example:
+# extraObjects:
+#   - apiVersion: v1
+#     kind: Secret
+#     metadata:
+#       name: "{{ include \"rabbitmq-cluster.fullname\" . }}-extra"
+#     type: Opaque
+#     stringData:
+#       foo: bar
+#   - |
+#     apiVersion: v1
+#     kind: ConfigMap
+#     metadata:
+#       name: {{ include "rabbitmq-cluster.fullname" . }}-extra
+#     data:
+#       key: value
+
 rabbitmq:
   cluster:
     # If false, this chart will NOT create a RabbitmqCluster; you must point topology at an existing cluster.
